# meshtool

./: .gitignore  CMakeLists.txt  README.md  clean
fonts/ttf/: LICENSE.md
meshes/: suzanne.blend
shaders/: basic.fs  basic.vs
src/: all.cpp  meshtool.cpp
src/include/meshtool/: matrices.hpp  meshtool.hpp
